[package]
name = "r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.56"
futures = "0.3.21"
itertools = "0.10.3"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
snafu = "0.7.1"
static_assertions = "1.1.0"
unicase = "2.6.0"
